[package]
name = "rust_cast"
description = "Library that allows you to communicate with Google Cast enabled devices (e.g. Chromecast)."
documentation = "https://azasypkin.github.io/rust-cast/"
homepage = "https://github.com/azasypkin/rust-cast"
repository = "https://github.com/azasypkin/rust-cast"
readme = "README.md"
license = "MIT"
keywords = ["cast", "chromecast", "google"]
version = "0.18.0"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]
categories = ["api-bindings", "hardware-support", "multimedia"]
edition = "2021"
exclude = [
    ".github/*",
    "examples/*",
    "protobuf/*",
]

[dependencies]
byteorder = "1.4.3"
log = "0.4.17"
openssl = "0.10.45"
protobuf = "=3.2.0"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"

[dev-dependencies]
ansi_term = "0.12.1"
docopt = "1.1.1"
env_logger = "0.10.0"

[build-dependencies]
protobuf-codegen = "=3.2.0"

[features]
thread_safe = []
