[package]
name = "rust_cast"
description = "Library that allows you to communicate with Google Cast enabled devices (e.g. Chromecast)."
documentation = "https://docs.rs/crate/rust_cast/"
homepage = "https://github.com/azasypkin/rust-cast"
repository = "https://github.com/azasypkin/rust-cast"
readme = "README.md"
license = "MIT"
keywords = ["cast", "chromecast", "google"]
version = "0.20.0"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]
categories = ["api-bindings", "hardware-support", "multimedia"]
edition = "2021"
exclude = [
    ".github/*",
    "examples/*",
    "protobuf/*",
]

[dependencies]
byteorder = "1.5"
log = "0.4"
protobuf = "=3.4.0"
rustls = "0.23"
rustls-native-certs = "0.7"
serde = "1"
serde_derive = "1"
serde_json = "1"
thiserror = "1.0.61"

[dev-dependencies]
ansi_term = "0.12.1"
docopt = "1.1.1"
env_logger = "0.11.3"
mdns-sd = "0.11.0"

[build-dependencies]
protobuf-codegen = "=3.4.0"

[features]
thread_safe = []
